[package]
name = "thermostat-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
const_format = "0.2.32"
env_logger = "0.11.0"
ping = "0.5.1"
reqwest = { version = "0.11.23", default-features = false, features = ["json"] } # Exclude TLS as we only make requests to local IPs.
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = "1.35.1"
tristate = "0.1.1"
