[package]
name = "thermostat-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
anyhow = { version = "1.0.86", features = ["backtrace"] }
const_format = "0.2.32"
env_logger = "0.11.3"
log = "0.4.22"
ping = "0.5.2"
reqwest = { version = "0.12.5", default-features = false, features = ["json"] } # Exclude TLS as we only make requests to local IPs.
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
thiserror = "1.0.61"
tokio = "1.38.0"
tristate = "0.1.1"
